<resources>
    <string name="app_name">Food Order App</string>
    <string name="unexpected_error">Unexpected Behaviour contact administrator!</string>
    <string name="list_not_found">List not found!</string>
    <string name="validation_failed">Please Fill all the fields.</string>
    <string name="no_internet_connection">Please check your Internet Connection and Try again.</string>
    <string name="permission_required">Enable to proceed. Please allow all the permission required.</string>
    <string name="user_list_error">Failed to load data. Refresh to try again</string>


    <string name="finish_order">FINISH ORDER</string>
    <string name="customer_details">Customer Details</string>
    <string name="order_details">Order Details</string>
    <string name="customer_name">Customer Name :</string>
    <string name="customer_address">Customer Address :</string>
    <string name="address">Address</string>
    <string name="customer_city">City :</string>
    <string name="customer_state">State :</string>
    <string name="customer_zip">Zip :</string>
    <string name="customer_number">Number :</string>
    <string name="schedule_date">Schedule Date :</string>
    <string name="last_updated_date">Last Update :</string>
    <string name="service_requested">Service Requested :</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>

    <string name="add">add</string>
    <string name="firstName">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="user_details">User Details</string>
    <string name="loading">Loading...</string>

</resources>