<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.sushant.sampledemomvvmapicall.model.ListItemData" />

        <variable
            name="viewModel"
            type="com.sushant.sampledemomvvmapicall.views.details.viewmodel.DetailsViewModel" />

        <variable
            name="listener"
            type="com.sushant.sampledemomvvmapicall.views.details.ui.IOnDoneClickListener" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btnAddButton"
            android:layout_alignParentTop="true">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/dp_10"
                        android:elevation="@dimen/dp_10"
                        app:cardCornerRadius="@dimen/dp_10"
                        app:cardPreventCornerOverlap="false"
                        app:cardUseCompatPadding="false">

                        <LinearLayout
                            android:layout_gravity="right"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">


                            <com.google.android.material.imageview.ShapeableImageView
                                android:id="@+id/image"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/dp_270"
                                android:scaleType="fitXY"
                                app:cornerFamily="rounded"
                                app:cornerSize="@dimen/dp_10"
                                app:cornerSizeBottomLeft="0dp"
                                app:cornerSizeBottomRight="0dp"
                                app:srcCompat="@drawable/flower"
                                android:onClick="@{() ->listener.onImageClick()}"
                                bind:loadUrl="@{item.imageUrl}" />


                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/ivActive"
                                android:layout_gravity="right"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/dp_5"
                                bind:loadActive="@{item.isActive}" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/dp_5"
                                android:gravity="center"
                                android:text="@string/user_details"
                                android:textColor="@android:color/black"
                                android:textSize="@dimen/sp_30"
                                android:textStyle="bold" />

                            <com.sushant.sampledemomvvmapicall.views.base.CustomTextInputLayout
                                style="@style/Outlined.Theme"
                                android:hint="@string/firstName">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/edtFirstName"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/black"
                                    android:inputType="textPersonName"
                                    android:maxLines="1"
                                    bind:itemId="@{item.id}"
                                    bind:viewModel="@{viewModel}"
                                    android:text="@{item.customer.firstName}"
                                    android:textColorHint="@color/black" />
                            </com.sushant.sampledemomvvmapicall.views.base.CustomTextInputLayout>

                            <com.sushant.sampledemomvvmapicall.views.base.CustomTextInputLayout
                                style="@style/Outlined.Theme"
                                android:hint="@string/last_name">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/edtLastName"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="textPersonName"
                                    android:textColor="@color/black"
                                    android:text="@{item.customer.lastName}"
                                    bind:itemId="@{item.id}"
                                    bind:viewModel="@{viewModel}"
                                    android:maxLines="1"
                                    android:textColorHint="@color/black" />
                            </com.sushant.sampledemomvvmapicall.views.base.CustomTextInputLayout>

                            <com.sushant.sampledemomvvmapicall.views.base.CustomTextInputLayout
                                style="@style/Outlined.Theme"
                                android:hint="@string/address">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/edtAddress"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="textEmailAddress"
                                    android:textColor="@color/black"
                                    android:minLines="4"
                                    android:lines="4"
                                    android:maxLines="4"
                                    bind:itemId="@{item.id}"
                                    bind:viewModel="@{viewModel}"
                                    bind:loadAddress="@{item}"
                                    android:textColorHint="@color/black" />

                            </com.sushant.sampledemomvvmapicall.views.base.CustomTextInputLayout>

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </ScrollView>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/dp_20"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() ->listener.onDoneClick()}"
            android:text="@string/finish_order"
            tools:ignore="UnusedAttribute" />
    </RelativeLayout>

</layout>